# robot_action_captioning

./: .gitignore  README.md  pyproject.toml
robot_action_captioning/: __init__.py
robot_action_captioning/config/: config.py
robot_action_captioning/datasets/: __init__.py  dataconfig.py  dataloader.py  datatype.py  datatypes.py  schemas.py
robot_action_captioning/scripts/: __init__.py  extract_data_from_hdf5.py  generate_data.py  generate_prompt.py  mytest.py  visualize_data.py
robot_action_captioning/utils/: __init__.py  utils.py
robot_action_captioning/visualization/: __init__.py  streamlit_app.py
scripts/: extract_data_from_hdf5.py  generate_data.py
src/: action_captioning_prompt
test/: test_visualize_data.py
tests/: test_dataloader.py  test_datatype.py  test_schemas_json.py
