[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_action_captioning"
version = "0.1.0"
description = "Robot Action Captioning"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "streamlit",
    "Pillow",
    "h5py",
    "transformers",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]